--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *    {margin: 0; padding: 0; border: 0; }
 body {background-image: linear-gradient(to right, 
-      #330000, #000000, #000033  );}
+      #330000, #000000, #000033); }
 
 header {font: italic bold 3vh "Indie Flower"; 
         text-align: center; color: #ffffff; display:block; }
@@ -8,7 +8,7 @@ section {height: 3vh; box-sizing: border-box; font-size: 2vh;}
 
 #grid1  {text-align: center; display:block; margin: 2vh auto;
          border: 5vh solid red; border-bottom: 10vh solid red; border-radius: 3vw; 
-         width: 80%; background-color: #bec2cb;}
+         width: 80%; background-color: #bec2cb; position: relative;}
 
 .boxTp1 {display: inline-block; box-sizing: border-box;
          border: 1px solid #aaaaaa;} 
